# mcmod

./: Cargo.toml  LICENSE  README.md  mcmod.ps1  templates.json
init/: mcmod.yaml
init/meta/: my_at.cfg
init/src/pistonmc/mymodid/: ModInfo.java  ModMain.java
modules/: mcmod.py
scripts/: build.py  coremod.py  devget.py  eclipse.py  help.py  info.py  init.py  run.py  version.py
src/: build.rs  gradle.rs  init.rs  main.rs  mcmod.rs  run.rs  sync.rs  util.rs
src/template/: gtnh.rs  mod.rs  ntmc.rs
templates/: repos.json
templates/forge-1.7.10/: mcmod.gradle  mcmod.json
templates/forge-1.7.10/forge/: build.gradle
templates/forge-1.7.10/src/pistonmc/forge1710template/: ModInfo.java  ModMain.java
