[package]
name = "mcmod"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.5"
clap = { version = "4.4.12", features = ["derive"] }
copy_dir = "0.1.3"
dunce = "1.0.4"
error-stack = "0.4.1"
ninja-writer = {version = "0.2.0", features = ["thread-safe"]}
quick-xml = { version = "0.31.0", features = ["async-tokio"] }
reqwest = "0.11.23"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread", "fs", "sync"] }
walkdir = "2.4.0"
